frontend/tests/cases/positive/gradedBaseADT.gr
language GradedBase

data BoxNat : (n : Nat) -> Type -> Type where
  BoxNat : forall {a : Type, n : Nat} . a % n -> BoxNat n a
